# authentication_template_app

./: .pre-commit-config.yaml  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  main.py  my_database.db  pyproject.toml  requirements.txt  settings.py  test_database.db
api/: handlers.py  login_handler.py  models.py  schemas.py
api/actions/: auth.py  user.py
db/: dals.py  models.py  session.py
migrate/: env.py
migrate/versions/: 05c426f7cbd5_add_new_field_in_the_model.py  1c37df8ed744_add.py  20beed7e156b_add_migrations.py  3bc992eb8b80_create_users_tables.py  4ca827e1f9d9_create_table_users.py  fdf3c145fe47_migrate_update.py
poll/: models.py
tests/: conftest.py
user/: models.py
