[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Dastan <ermekoffdastan@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
